load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "form.go",
        "request.go",
        "response.go",
    ],
    importpath = "angrymiao-go/punk/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ecode:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/net/http/blademaster:go_default_library",
        "//vendor/github.com/astaxie/beego/validation:go_default_library",
    ],
)
