load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "client_v2.go",
    ],
    importpath = "angrymiao-go/punk/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/conf/env:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/log:go_default_library",
    ],
)
