load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "list.go",
        "pool.go",
        "slice.go",
    ],
    importpath = "angrymiao-go/punk/container/pool",
    visibility = ["//visibility:public"],
    deps = ["//punk/time:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "list_test.go",
        "slice_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//punk/time:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
