load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "discovery.go",
        "shuffle.go",
    ],
    importpath = "angrymiao-go/punk/naming/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/conf/env:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/exp/feature:go_default_library",
        "//punk/log:go_default_library",
        "//punk/naming:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//punk/net/netutil:go_default_library",
        "//punk/net/netutil/breaker:go_default_library",
        "//punk/time:go_default_library",
        "//punk/xstr:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "discovery_test.go",
        "example_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//punk/conf/env:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/exp/feature:go_default_library",
        "//punk/naming:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
    ],
)
