load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "balancer.go",
        "client.go",
        "client2.go",
        "server.go",
        "trace.go",
    ],
    importpath = "angrymiao-go/punk/net/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/conf/dsn:go_default_library",
        "//punk/conf/env:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/log:go_default_library",
        "//punk/naming:go_default_library",
        "//punk/naming/discovery:go_default_library",
        "//punk/net/metadata:go_default_library",
        "//punk/net/netutil/breaker:go_default_library",
        "//punk/net/rpc/context:go_default_library",
        "//punk/net/rpc/interceptor:go_default_library",
        "//punk/net/trace:go_default_library",
        "//punk/stat:go_default_library",
        "//punk/sync/errgroup:go_default_library",
        "//punk/time:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "breaker_test.go",
        "client2_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//punk/conf/env:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/log:go_default_library",
        "//punk/naming:go_default_library",
        "//punk/naming/discovery:go_default_library",
        "//punk/net/rpc/context:go_default_library",
        "//punk/time:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
    ],
)
