load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "databus.go",
        "databus.pb.go",
    ],
    importpath = "angrymiao-go/punk/queue/databus",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/cache/redis:go_default_library",
        "//punk/conf/env:go_default_library",
        "//punk/container/pool:go_default_library",
        "//punk/log:go_default_library",
        "//punk/naming:go_default_library",
        "//punk/naming/discovery:go_default_library",
        "//punk/net/netutil:go_default_library",
        "//punk/net/trace:go_default_library",
        "//punk/stat/prom:go_default_library",
        "//punk/time:go_default_library",
        "//vendor/github.com/gogo/protobuf/gogoproto:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["databus_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//punk/naming/discovery:go_default_library",
        "//punk/time:go_default_library",
    ],
)
