load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["limit.go"],
    importpath = "angrymiao-go/punk/rate/limit",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/container/queue/aqm:go_default_library",
        "//punk/log:go_default_library",
        "//punk/rate:go_default_library",
        "//punk/rate/vegas:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["limit_test.go"],
    embed = [":go_default_library"],
    deps = ["//punk/rate:go_default_library"],
)
