load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pipeline.go"],
    importpath = "angrymiao-go/punk/sync/pipeline",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/net/metadata:go_default_library",
        "//punk/stat/metric:go_default_library",
        "//punk/time:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pipeline_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//punk/net/metadata:go_default_library",
        "//punk/time:go_default_library",
    ],
)
