load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "angrymiao-go/app/admin/passport/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/admin/passport/conf:go_default_library",
        "//app/admin/passport/server/http:go_default_library",
        "//app/admin/passport/service:go_default_library",
        "//punk/log:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
