load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "model.go",
        "params.go",
    ],
    importpath = "angrymiao-go/app/admin/passport/model",
    visibility = ["//visibility:public"],
    deps = ["//punk/model:go_default_library"],
)
