load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "passport.go",
        "service.go",
    ],
    importpath = "angrymiao-go/app/admin/passport/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/admin/passport/conf:go_default_library",
        "//app/admin/passport/dao:go_default_library",
        "//app/admin/passport/model:go_default_library",
        "//punk/log:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/empty:go_default_library",
    ],
)
