load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "angrymiao-go/app/infra/canal/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/infra/canal/conf:go_default_library",
        "//app/infra/canal/internal/di:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/log:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
