load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canal_conf.go",
        "conf.go",
    ],
    importpath = "angrymiao-go/app/infra/canal/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/canal/infoc:go_default_library",
        "//punk/conf:go_default_library",
        "//punk/log:go_default_library",
        "//punk/naming/discovery:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//punk/net/netutil/breaker:go_default_library",
        "//punk/queue/databus:go_default_library",
        "//punk/time:go_default_library",
        "//vendor/github.com/BurntSushi/toml:go_default_library",
        "//vendor/github.com/siddontang/go-mysql/canal:go_default_library",
        "//vendor/github.com/siddontang/go-mysql/client:go_default_library",
        "//vendor/github.com/siddontang/go-mysql/mysql:go_default_library",
    ],
)
