load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["conf.go"],
    importpath = "angrymiao-go/app/infra/databus/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//punk/conf:go_default_library",
        "//punk/log:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//punk/net/netutil/breaker:go_default_library",
        "//vendor/github.com/BurntSushi/toml:go_default_library",
    ],
)
