load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "guard.go",
        "node.go",
        "nodes.go",
        "registry.go",
    ],
    importpath = "angrymiao-go/app/infra/discovery/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/discovery/conf:go_default_library",
        "//app/infra/discovery/model:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/log:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//punk/sync/errgroup:go_default_library",
        "//punk/xstr:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "guard_test.go",
        "node_test.go",
        "nodes_test.go",
        "registry_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//app/infra/discovery/conf:go_default_library",
        "//app/infra/discovery/model:go_default_library",
        "//punk/ecode:go_default_library",
        "//punk/net/http/blademaster:go_default_library",
        "//punk/net/netutil/breaker:go_default_library",
        "//punk/time:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
        "//vendor/gopkg.in/h2non/gock.v1:go_default_library",
    ],
)
