load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "discovery.go",
        "register.go",
        "syncup.go",
    ],
    importpath = "angrymiao-go/app/infra/discovery/discovery",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/discovery/conf:go_default_library",
        "//app/infra/discovery/model:go_default_library",
        "//app/infra/discovery/registry:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/ecode:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/log:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/net/http/blademaster:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["register_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//app/infra/discovery/conf:go_default_library",
        "//app/infra/discovery/model:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/conf/paladin:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/ecode:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/net/http/blademaster:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/time:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
        "//vendor/gopkg.in/h2non/gock.v1:go_default_library",
    ],
)
