load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "discovery.go",
        "http.go",
    ],
    importpath = "angrymiao-go/app/infra/discovery/http",
    visibility = ["//visibility:public"],
    deps = [
        "//app/infra/discovery/conf:go_default_library",
        "//app/infra/discovery/model:go_default_library",
        "//app/infra/discovery/service:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/ecode:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/log:go_default_library",
        "//vendor/github.com/CloudZou/punk/pkg/net/http/blademaster:go_default_library",
    ],
)
